--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -2,6 +2,7 @@
   display: flex;
 	background-color: rgb(46, 193, 172);
   width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   height: 60px;
   .header__icon {
@@ -98,3 +99,8 @@
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: 425px) {
+  .header__content {
+    display: none !important;
+  }
+}
