--- a/src/Pages/Body.scss
+++ b/src/Pages/Body.scss
@@ -1,7 +1,7 @@
 .body {
 	display: flex;
 	width: 100%;
-	height: 60vh;
+	min-height: 60vh;
 	margin: 0 auto;
 	.body__content {
 		display: flex;
@@ -10,12 +10,14 @@
 			display: flex;
 			align-items: center;
 			width: 60%;
+			min-width: 60%;
 			.body__cards--details {
 				cursor: pointer;
 				display: flex;
 				flex-direction: column;
 				margin-left: 30px;
 				width: 180px;
+				min-width: 180px;
 				height: 250px;
 				border-radius: 3px;
 				border: 1px rgba(0, 0, 0, 0.2) solid;
@@ -202,5 +204,39 @@
 			padding-bottom: 30px;
 			padding-top: 30px;
 		}
+	}
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+	.body__content {
+		justify-content: center;
+		align-items: center;
+		margin-top: 50px;
+		.body__cards {
+			flex-direction: column;
+			&--details {
+				margin-bottom: 20px;
+			}
+		}
+	}
+}
+
+@media screen and (min-width: 320px) and (max-width: 425px) {
+	.body__content {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 50px;
+		.body__cards {
+			flex-direction: column;
+			&--details {
+				margin-bottom: 20px;
+			}
+		}
+	}
+	.body__search--content {
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 20px;
 	}
 }
